ssldomainroutingdns/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  annotations:
    kubernetes.io/ingress.class: "nginx"  
spec:
  rules:
    - host: app1.frozenbread.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
    - host: app2.frozenbread.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80
    - host: app3.frozenbread.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usermgmt-webapp-service
                port: 
                  number: 80
  tls:
  - hosts:
    - app1.frozenbread.online
    secretName: app1-frozenbread-secret           
  - hosts:
    - app2.frozenbread.online
    secretName: app2-frozenbread-secret  
  - hosts:
    - app3.frozenbread.online
    secretName: app3-frozenbread-secret
